src/styles/_variables.scss
/* variables.module.scss */
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');


@mixin tablets() {
  @media (min-width: 701px)  {
    @content;
  }
}
@mixin mobile() {
  @media (max-width: 700px) {
    @content;
  }
}

:root{
  --max-width: 1100px;
  --border-radius: 12px;
  --input-border-radius: 4px;
  --font-mono: 'Fira Sans', sans-serif;
  --font-headers: 'Fira Sans', sans-serif;
  --foreground-rgb: 0, 0, 0;
  --background-color:#1b2e3c;
  --input-color:#fff;
  --color:#000 ;
  --font-weight:400;
  --transition: 0.2s ease-in-out;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 33, 40, 79;
    --background-end-rgb: 0, 0, 0;
    --color:#fff;
    --background-color:#1b2e3c;
    --input-color:#000;
  }
}

